# face_pose

./: .gitignore  CMakeLists.txt  README.md  main.cpp
camera/: CMakeLists.txt  base_camera.h  luxonis_camera.cpp  luxonis_camera.h
ipc/: CMakeLists.txt  client.cpp  client.h  server.cpp  server.h
ipc/idl/: generate_idl.sh  pose.idl
ipc/idl/autogen/: pose.hpp  poseCdrAux.hpp  poseCdrAux.ipp  posePubSubTypes.cxx  posePubSubTypes.hpp  poseTypeObjectSupport.cxx  poseTypeObjectSupport.hpp
pose_estimation/: CMakeLists.txt  README.md  base_face_pose.h  face_detection_yunet_160x120.blob  opencv_face_pose.cpp  opencv_face_pose.h  pose_estimation.cpp  pose_estimation.h  prior_box.h
process/: CMakeLists.txt  process.cpp  process.h
